<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- <string name="app_name">易采</string> -->
    <string name="app_name">代维交割</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_tips">提示</string>
    <string name="common_close">关闭</string>
    <string name="RegActivity_title">系统注册</string>
    <string name="RegActivity_cp">产品：E采</string>
    <string name="RegActivity_cpgs1">出品公司：</string>
    <string name="RegActivity_increase"></string>
    <string name="RegActivity_bb">版本：V1</string>
    <string name="RegActivity_zdxlh">终端序列号：</string>
    <string name="RegActivity_zc">注册</string>
    <string name="RegActivity_hqsb">获取失败</string>
    <string name="RegActivity_str_zcm">注册码：</string>
    <string name="RegActivity_ts_title">开启蓝牙</string>
    <string name="RegActivity_ts_message">注册的时候要开启蓝牙，现在打开吗？</string>
    <string name="RegActivity_ts_ex_message">您输入的注册码有误，请重新获取注册码</string>
    <string name="RegActivity_ts_ex_title">错误</string>
    <string name="RegActivity_ts_ex_message2">连接超时，中心系统无应答</string>
    <string name="RegActivity_ts_ex_title2">超时</string>
    <string name="RegActivity_ts_ex_message3">请打开手机的网络或者wifi之后重试</string>
    <string name="RegActivity_ts_ex_message4">正在注册手机，请稍等...</string>
    <string name="RegActivity_ts_ex_title4">请稍等</string>
    <string name="LoginAutoUpdate_title">版本升级</string>
    <string name="LoginAutoUpdate_last_time">上次更新时间:</string>
    <string name="LoginAutoUpdate_this_time">本次版本发布时间:</string>
    <string name="LoginAutoUpdate_size">版本大小:</string>
    <string name="LoginAutoUpdate_content">更新内容:</string>
    <string name="LoginAutoUpdate_update_progress">升级进度:</string>
    <string name="LoginAutoUpdate_update">升级</string>
    <string name="LoginAutoUpdate_toast_ts">您当前的版本已经最新版本无需更新</string>
    <string name="LoginAutoUpdate_toast_ts2">存储空间不足</string>
    <string name="LoginAutoUpdate_toast_ts3">下载失败</string>
    <string name="LoginBtDeviceActivity_noBluetooth">无法得到手机蓝牙信息</string>
    <string name="LoginBtDeviceActivity_openBluetooth">无法进行蓝牙连接操作，请先开启手机蓝牙</string>
    <string name="lon_lat_now">实时定位</string>
    <string name="nearby_device_search_lon">经度：</string>
    <string name="nearby_device_search_lat">纬度：</string>
    <string name="equinfo_main_save">保存</string>
    <string name="R_common_commit_tips">确定提交吗？</string>
    <string name="R_common_delete_tips">确定删除吗？</string>
    <string name="hecha_poleline_title">杆路资源</string>
    <string name="ConstructionWorkorderUserListSendOtherActivity_receiver">用户名:</string>
    <string name="ConstructionWorkorderUserListSendOtherActivity_receivername">用户姓名:</string>
    <string name="ConstructionWorkorderUserListSendOtherActivity_zhuanfaOk">转派成功</string>
    <string name="ConstructionWorkorderUserListSendOtherActivity_zhuanfaFaild">转派失败</string>
    <string name="pointinfo_activity_bt_jbxx">基本信息</string>
    <string name="pointinfo_activity_bt_ddxx">对端信息</string>
    <string name="pointinfo_activity_bt_tjxx">跳接信息</string>
    <string name="pointinfo_activity_bt_gxglxx">光纤/光路</string>
    <string name="pointinfo_activity_text_dzbm">端子编码：</string>
    <string name="pointinfo_activity_text_dzzt">端子状态：</string>
    <string name="pointinfo_activity_text_dzfx">端子方向：</string>
    <string name="pointinfo_activity_text_czyw">承载业务：</string>
    <string name="pointinfo_activity_text_sbmc">设备名称：</string>
    <string name="pointinfo_activity_text_dzbh">端子编号：</string>
    <string name="pointinfo_activity_text_dzlx">端子类型：</string>
    <string name="pointinfo_activity_text_ywlx">业务类型：</string>
    <string name="pointinfo_activity_text_sbbm">设备编码：</string>
    <string name="pointinfo_activity_text_ywbh">业务编号：</string>
    <string name="pointinfo_activity_text_sbbh">设备编号：</string>
    <string name="pointinfo_activity_text_sbdz">设备地址：</string>
    <string name="pointinfo_activity_text_bz">备注：</string>
    <string name="pointinfo_activity_text_xgr">修改人</string>
    <string name="pointinfo_activity_text_xgsj">修改时间</string>
    <string name="pointinfo_activity_bt_bc">保存</string>
    <string name="pointinfo_activity_bt_xg">修改</string>
    <string name="pointinfo_activity_bt_qx">取消</string>
    <string name="equinfo_main_equType">设备类型</string>
    <string name="equinfo_main_equName">设备名称</string>
    <string name="equinfo_main_equCode">设备编码</string>
    <string name="equinfo_main_equState">设备状态</string>
    <string name="equinfo_main_equAdd">设备地址</string>
    <string name="equinfo_main_station">设备局向</string>
    <string name="equinfo_main_station_get">获取</string>
    <string name="equinfo_main_EquLocation">定位</string>
    <string name="equinfo_main_equLongitudeAndLatitude">经度/纬度</string>
    <string name="equinfo_main_obtainEquLocation">获取设备定位信息</string>
    <string name="equinfo_main_note">备注信息</string>
    <string name="equinfo_main_ChangedBy">修改人</string>
    <string name="equinfo_main_mTime">修改时间</string>
    <string name="EquInfoMainActivity_select_eType">请选择设备类型</string>
    <string name="EquInfoMainActivity_select_eState">请选择设备状态</string>
    <string name="str_scan">扫描设备</string>
    <string name="str_device">蓝牙</string>
    <string name="str_scaning">扫描</string>
    <string name="OpticalCable_cable_name">*光缆名称</string>
    <string name="OpticalCable_cable_level">光缆级别</string>
    <string name="OpticalCable_cable_startBureau">起始站点</string>
    <string name="OpticalCable_cable_endBureau">终止站点</string>
    <string name="OpticalCable_cable_scutcheon">光缆标牌</string>
    <string name="zckpku">资产卡片库</string>
    <string name="str_connected">连接到蓝牙设备</string>
    <string name="str_connecting">正在连接</string>
    <string name="str_scanover">扫描结束</string>
    <string name="str_disconnected">没有连接到蓝牙设备</string>
    <string name="str_unconnected">没有蓝牙连接</string>
    <string name="str_succonnect">连接蓝牙成功</string>
    <string name="str_faileconnect">连接蓝牙失败</string>
    <string name="str_lose">蓝牙连接断开</string>
    <string name="mode_bt">蓝牙打印</string>
    <string name="LoginActivity_exitNowConect">确定退出？</string>
    <string name="add_pole_info_ename">电杆名称</string>
    <string name="add_pole_info_code">电杆编号</string>
    <string name="add_pole_info_ssdw">产权单位</string>
    <string name="add_pole_info_ssjz">所属站点</string>
    <string name="add_pole_info_address">电杆地址</string>
    <string name="add_pole_info_jwd">电杆经纬度</string>
    <string name="add_equipment_info_get">获取</string>
    <string name="add_pole_info_cz">电杆材质</string>
    <string name="add_pole_info_ms">埋深(单位：米)</string>
    <string name="add_equipment_info_whdw">数据质量责任人</string>
    <string name="add_equipment_info_whfs">维护方式</string>
    <string name="add_pole_info_img_info">电杆图像信息</string>
    <string name="add_equipment_take_photo">拍照</string>
    <string name="add_equipment_select_photo">选择</string>
    <string name="add_equipment_show_photo">查看</string>
    <string name="add_pole_info_cs">电杆程式(单位：米)</string>
    <string name="add_pole_info_bj">电杆半径(单位：厘米)</string>
    <string name="add_equipment_info_dsfwhdw">一线维护人</string>
    <string name="add_pole_xx">添加电杆资源信息</string>
    <string name="add_poleline_info_ename_guifan">命名选择</string>
    <string name="add_poleline_info_ename_guifants">"确定用道路命名吗？
如果不是，请人工输入"</string>
    <string name="hecha_pole_title">电杆资源核查</string>
    <string name="AddPoleActivtyTakePhotoTips">请在填写完电杆名称后再进行拍照操作</string>
    <string name="add_poleline_info_bm">杆路编号</string>
    <string name="add_poleline_info_jb">杆路级别</string>
    <string name="add_poleline_info_length">杆路长度(单位：米)</string>
    <string name="add_poleline_info_huanmit">缓存</string>
    <string name="add_poleline_info_qsss">起始设施</string>
    <string name="add_poleline_info_zzss">终止设施</string>
    <string name="add_poleroute_info_ename">杆路段名称</string>
    <string name="add_poleroute_info_code">杆路段编号</string>
    <string name="add_poleroute_info_length">杆路段长度(单位：米)</string>
    <string name="add_poleroute_info_state">状态</string>
    <string name="add_poleroute_info_choose">选择</string>
    <string name="add_equipment_info_xbjzrq">续保截止日期</string>
    <string name="add_equipment_info_wblx">维保类型</string>
    <string name="add_equipment_info_gmwbnx">购买维保年限</string>
    <string name="add_equipment_info_xmbhx">项目编号</string>
    <string name="add_equipment_info_xbjzri">保修截止日期</string>
    <string name="add_equipment_info_xmmc">项目名称</string>
    <string name="add_pole_button">添加电杆</string>
    <string name="add_poleroute_title">杆路资源信息</string>
    <string name="common_searching">查询中</string>
    <string name="common_searchingWait">正在进行查询操作，请稍候...</string>
    <string name="LoginInstallActivity_tips_ok">确认</string>
    <string name="LoginInstallActivity_tips_cancel">取消</string>
    
    <string name="bpbj">备品备件及仪器仪表</string>
    <string name="guanxian">管道杆路网资源</string>
    <string name="hjdl">环境动力资源</string>
    <string name="jckj">基础空间资源</string>
    <string name="jifang">机房物理设备资源</string>
    <string name="more_base">更多</string>
    <string name="zyjg">资源交割</string>
    <string name="shequ">家客资源</string>
    <string name="web">专业网络资源</string>
    <string name="xlw">集客专线资源</string>
    
    <string name="gl_base">杆路</string>
    <string name="ganluduan_base">杆路段</string>
    <string name="dg_base">电杆</string>
    <string name="chengdian_base">撑点</string>
    <string name="diaoxian_base">吊线</string>
    <string name="diaoxianduan_base">吊线段</string>
    <string name="guandao_base">管道</string>
    <string name="guandaoduan_base">管道段</string>
    <string name="jing_base">井</string>
    <string name="yinshang_base">引上点</string>
    <string name="guanglan_base">光缆</string>
    <string name="guanglanduan_base">光缆段</string>
    <string name="jietouhe_base">光缆接头盒</string>
    <string name="fenxianhe_base">光缆分纤盒</string>
    
    <string name="location">定位</string>
    
</resources>
