<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5.0dip" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:padding="5.0dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="光终端盒名称"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@id/edit_text_ename"
                    style="@style/edit_3"
                    android:editable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="120.0dip"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>
            
            
            <!-- 序号 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="序号"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_text_xuhao"
                    style="@style/edit_3"
                    android:layout_width="fill_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:minWidth="120.0dip"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>
            <!-- end 序号 -->

            <TextView
                style="@style/text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5.0dip"
                android:text="@string/equinfo_main_equLongitudeAndLatitude"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5.0dip" >

                <EditText
                    android:id="@id/edit_text_lon"
                    style="@style/edit_1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:enabled="false"
                    android:gravity="center"
                    android:minWidth="100.0dip"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/text_color_init" />

                <EditText
                    android:id="@id/edit_text_lat"
                    style="@style/edit_1"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"
                    android:enabled="false"
                    android:gravity="center"
                    android:minWidth="100.0dip"
                    android:textAppearance="?android:textAppearanceMedium" />

                <ImageView
                    android:id="@id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/location"
                    android:onClick="location_click"
                    android:text="@string/equinfo_main_EquLocation"
                    android:textSize="16.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:text="行数"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.inspur.component.numberpicker.view.ActualNumberPicker
                    android:id="@+id/hangshu"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    app:bar_color="?attr/colorAccent"
                    app:bar_width="1dp"
                    app:bars_count="6"
                    app:controls_color="@android:color/white"
                    app:draw_over_controls="true"
                    app:draw_over_text="false"
                    app:fast_controls_color="@android:color/darker_gray"
                    app:highlight_color="?attr/colorAccent"
                    app:max_value="8"
                    app:min_value="1"
                    app:selection_color="?attr/colorAccent"
                    app:show_bars="false"
                    app:show_controls="true"
                    app:show_fast_controls="true"
                    app:show_highlight="true"
                    app:show_text="true"
                    app:text_color="@android:color/black"
                    app:text_size="16sp"
                    app:value="8" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:text="列数"
                    android:textAppearance="?android:textAppearanceMedium" />

                <com.inspur.component.numberpicker.view.ActualNumberPicker
                    android:id="@+id/lieshu"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    app:bar_color="@android:color/white"
                    app:bar_width="1dp"
                    app:bars_count="26"
                    app:controls_color="@android:color/white"
                    app:draw_over_controls="true"
                    app:draw_over_text="false"
                    app:fast_controls_color="@android:color/darker_gray"
                    app:highlight_color="?attr/colorAccent"
                    app:max_value="12"
                    app:min_value="1"
                    app:selection_color="?attr/colorAccent"
                    app:show_bars="false"
                    app:show_controls="true"
                    app:show_fast_controls="true"
                    app:show_highlight="true"
                    app:show_text="true"
                    app:text_color="@android:color/black"
                    app:text_size="16sp"
                    app:value="12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="归属点类型"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_attachtype"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="归属点名称"
                    android:textAppearance="?android:textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/edit_text_attachid"
                        style="@style/edit_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:minWidth="120.0dip"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/edit_text_attachname"
                        style="@style/edit_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:editable="false"
                        android:minWidth="120.0dip"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1.0dip"
                        android:background="@drawable/get"
                        android:onClick="select_onc"
                        android:text="获取" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="100.0dip"
                    android:layout_height="wrap_content"
                    android:text="@string/equinfo_main_equAdd"
                    android:textAppearance="?android:textAppearanceMedium" />

                <EditText
                    android:id="@id/edit_text_eadress"
                    style="@style/edit_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="120.0dip"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="数据质量责任人" />

                <EditText
                    android:id="@+id/sjzlzrr"
                    style="@style/edit_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingTop="3.0dip"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5.0dip" >

                <TextView
                    style="@style/text_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="一线维护人" />

                <EditText
                    android:id="@+id/yxwhr"
                    style="@style/edit_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:paddingTop="3.0dip"
                    android:text="" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="@style/formActionArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="horizontal" >

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="get_model_onc"
            android:text="面板图"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="photo_onc"
            android:text="拍照"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dip"
            android:layout_height="48.0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="save_onc"
            android:text="@string/equinfo_main_save"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />

        <Button
            android:id="@id/delete_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dip"
            android:layout_height="48.0dip"
            android:layout_marginBottom="0.0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="cs_delete"
            android:text="删除"
            android:textAppearance="?android:textAppearanceMedium"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>